auto-test/tests/chapter_10/valid/extra_credit/label_file_scope_var_same_name.c



int x;  

int main(void) {
    int x = 10;  
    goto x;      
    return x;
    {
        
        
        
        extern int x;
    x:             
        return x;  
    }
}