auto-test/tests/chapter_10/invalid_parse/extra_credit/extern_label.c


int main(void) {
    extern a:
    return 1;
}